--- a/resources/assets/sass/_base.scss
+++ b/resources/assets/sass/_base.scss
@@ -11,4 +11,8 @@
       display: block;
     }
   }
+
+  strong {
+    @include font-stack-roboto-bold;
+  }
 }
