--- a/resources/assets/sass/_variables.scss
+++ b/resources/assets/sass/_variables.scss
@@ -18,6 +18,7 @@ $brand-danger: #bf5329;
 $brand-orange: #ee482d;
 $brand-grey-text: #404040;
 $brand-light-grey: #cecccd;
+$brand-grey-contact-bg: #f1f2f2;
 
 // Typography
 $icon-font-path: "~bootstrap-sass/assets/fonts/bootstrap/";
