--- a/resources/assets/sass/components/_home.scss
+++ b/resources/assets/sass/components/_home.scss
@@ -2,3 +2,7 @@
 	float:left;
 	width:100%;
 }
+
+.carousel-container {
+  overflow: hidden;
+}
